unpackaged/main/default/objects/loan__Org_Parameters__c/loan__Org_Parameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Org Parameters</label>
</CustomObject>