unpackaged/main/default/objects/loan__Org_Parameters__c/fields/Auto_Payer_Lending_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Auto_Payer_Lending_Product_Name__c</fullName>
    <label>Auto Payer Lending Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>