unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Concurrent_BatchJobs__c.field-meta.xml
<CustomField>
    <fullName>loan__Concurrent_BatchJobs__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of Batch job instances to be run in parallel</description>
    <inlineHelpText>Number of BatchJob instances to be run in parralel</inlineHelpText>
    <label>Concurrent Batch Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>