unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Default_Tolerance_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Default_Tolerance_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Organization wide tolerance value for payments.</description>
    <inlineHelpText>Organization wide tolerance value for loan repayments.</inlineHelpText>
    <label>Default Tolerance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>