unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Digits_After_Decimals__c.field-meta.xml
<CustomField>
    <fullName>loan__Digits_After_Decimals__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>Digits are decimals for rounding.</inlineHelpText>
    <label>Digits After Decimals</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>