unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>loan__Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This disables all the triggers. It is to be used only while migrating data into the system. It must be disabled otherwise.</inlineHelpText>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>