unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Draw_Amortization_Schedule__c.field-meta.xml
<CustomField>
    <fullName>loan__Draw_Amortization_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked then at rescheduling amortization schedule will be drawn</inlineHelpText>
    <label>Draw Amortization Schedule</label>
    <type>Checkbox</type>
</CustomField>