unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Enable_New_Spread_Option__c.field-meta.xml
<CustomField>
    <fullName>loan__Enable_New_Spread_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this check box is checked then new spread will be enabled.</description>
    <label>Enable New Spread Option</label>
    <type>Checkbox</type>
</CustomField>