unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__FinancialCalculatorVersion__c.field-meta.xml
<CustomField>
    <fullName>loan__FinancialCalculatorVersion__c</fullName>
    <label>Financial Calculator Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>