unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Integrate_Salesforce_CRM__c.field-meta.xml
<CustomField>
    <fullName>loan__Integrate_Salesforce_CRM__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this is checked,  the standard objects Account and Contacts will be used.</inlineHelpText>
    <label>Integrate Salesforce CRM</label>
    <type>Checkbox</type>
</CustomField>