unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Log_Level__c.field-meta.xml
<CustomField>
    <fullName>loan__Log_Level__c</fullName>
    <defaultValue>"ERROR"</defaultValue>
    <description>The loggin level of the application. Valid options are:
DEBUG, ERROR, NONE</description>
    <inlineHelpText>The loggin level of the application. Valid options are:
DEBUG, ERROR, NONE</inlineHelpText>
    <label>Log Level</label>
    <length>64</length>
    <type>Text</type>
</CustomField>