unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>loan__Namespace_Prefix__c</fullName>
    <defaultValue>"loan"</defaultValue>
    <description>This is MFiFlex internal.</description>
    <inlineHelpText>This is MFiFlex internal. Do not delete/edit this value.</inlineHelpText>
    <label>Namespace Prefix</label>
    <length>64</length>
    <type>Text</type>
</CustomField>