unpackaged/main/default/objects/loan__Org_Parameters__c/fields/loan__Rounding_Mode__c.field-meta.xml
<CustomField>
    <fullName>loan__Rounding_Mode__c</fullName>
    <defaultValue>'NEAREST'</defaultValue>
    <inlineHelpText>This specifies the rounding behavior for numerical operations capable of discarding precision. Each rounding mode indicates how the least significant returned digit of a rounded result is to be calculated.</inlineHelpText>
    <label>Rounding Mode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>