unpackaged/main/default/objects/loan__Org_Parameters__c/fields/Manual_Payer_Lending_product_name__c.field-meta.xml
<CustomField>
    <fullName>Manual_Payer_Lending_product_name__c</fullName>
    <label>Manual Payer Lending product name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>