unpackaged/main/default/objects/loan__Org_Parameters__c/fields/peer__Bazaar_Namespace__c.field-meta.xml
<CustomField>
    <fullName>peer__Bazaar_Namespace__c</fullName>
    <label>Namespace Prefix(Bazaar)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>