unpackaged/main/default/objects/loan__Org_Parameters__c/fields/peer__Disable_SMS_Verification__c.field-meta.xml
<CustomField>
    <fullName>peer__Disable_SMS_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SMS Verification</label>
    <type>Checkbox</type>
</CustomField>