unpackaged/main/default/objects/loan__Org_Parameters__c/fields/WriteOffSuggestion__c.field-meta.xml
<CustomField>
    <fullName>WriteOffSuggestion__c</fullName>
    <label>WriteOffSuggestion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>